--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
-/*  your css code here. If applicable */
+.hero{
+	display:flex;
+	justify-content:centre;
+	align-items:center;
+}
+.hero img {
+    width:300px;
+	height:200px;
+	object-fit:cover;
+      }
+.hero-content a{
+	padding:12px 25px;
+	background-color:red;
+	color:white;
+	border-radius:none;
+}
